--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ng2-pdf-viewer": "^10.4.0",
     "pdfjs-dist": "^4.10.38",
     "rxjs": "~7.8.0",
+    "three": "^0.172.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
@@ -40,6 +41,7 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "@types/three": "^0.172.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
