--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "express": "^4.18.2",
+    "gsap": "^3.12.5",
+    "gsap-trial": "^3.12.5",
     "ng2-pdf-viewer": "^10.4.0",
     "pdfjs-dist": "^4.10.38",
     "rxjs": "~7.8.0",
