--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    // "start": "ng serve",
+    "start": "ts-node src/server.ts",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -24,14 +25,21 @@
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.11",
     "@fortawesome/fontawesome-free": "^6.7.1",
+    "body-parser": "^1.20.3",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
-    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "gsap": "^3.12.5",
     "gsap-trial": "^3.12.5",
+    "mongoose": "^8.10.1",
+    "mssql": "^11.0.1",
     "ng2-pdf-viewer": "^10.4.0",
     "pdfjs-dist": "^4.10.38",
     "rxjs": "~7.8.0",
+    "sequelize": "^6.37.5",
+    "tedious": "^18.6.1",
     "three": "^0.172.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -40,9 +48,12 @@
     "@angular-devkit/build-angular": "^17.3.11",
     "@angular/cli": "^17.3.11",
     "@angular/compiler-cli": "^17.3.0",
+    "@types/dotenv": "^8.2.3",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/mssql": "^9.1.7",
     "@types/node": "^18.18.0",
+    "@types/sequelize": "^4.28.20",
     "@types/three": "^0.172.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
@@ -50,6 +61,12 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "ts-node": "^10.9.2",
     "typescript": "~5.4.2"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 17.3.11.",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
